# firewood

./: .gitignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  DESIGN.md  LICENSE  README.md  README.zh-CN.md  package-lock.json  package.json  vite.config.ts
.github/prompts/: firewood-code-task.prompt.md  release.prompt.md
.github/workflows/: build.yml
.playwright-mcp/: page-2026-06-14T13-15-03-406Z.yml  page-2026-06-14T13-15-28-704Z.yml  page-2026-06-14T13-15-41-762Z.yml
public/prompts/: character_card_template.txt
scripts/: sync-version.mjs
src/: App.css  App.tsx  index.css  jsonc-parser.d.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  pty.rs  translate.rs
src-tauri/src/moxia/: commands.rs  dto.rs  migration.rs  mod.rs
src/components/AboutDialog/: AboutDialog.module.css  index.tsx
src/components/FontSizeControl/: FontSizeControl.module.css  index.tsx
src/components/MarkdownBody/: MarkdownBody.module.css  index.tsx
src/components/SettingsDialog/: SettingsDialog.module.css  index.tsx
src/components/SettingsMenuButton/: SettingsMenuButton.module.css  index.tsx
src/components/Sidebar/: Sidebar.module.css  index.tsx
src/hooks/: useCodemirror.ts  useEditorFontSize.ts  useMonacoCompat.ts  useMoxiaFontSize.ts  useMoxiaSettings.ts  usePersistentState.ts  useSidebarCollapsed.ts  useToolVisibility.ts
src/i18n/: index.ts
src/router/: tools.tsx
src/styles/: monaco-compat.css
src/types/: tool.ts
src/utils/: updateNotes.ts
(+57 files in other folders)
