[package]
name = "firewood"
version = "0.7.3"
description = "A Tauri App"
authors = ["ifmagic"]
license = ""
repository = ""
default-run = "firewood"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
reqwest = { version = "0.13", features = ["json"] }
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
chrono = "0.4"
md-5 = "0.11"
rand = "0.10"
tauri-plugin-shell = "2.3.5"
parking_lot = "0.12"
libc = "0.2"
font-kit = "0.14.3"

[profile.release]
strip = true
lto = true

[features]
custom-protocol = ["tauri/custom-protocol"]
